add swagger docs for user requests and update security meta data
