# docs/swagger.yaml
@@ -89,6 +89,11 @@ definitions:
       step_id:
         type: integer
     type: object
+  internal_transport_http.joinStudentInput:
+    properties:
+      invite_code:
+        type: string
+    type: object
   internal_transport_http.loginResponse:
     properties:
       token:
@@ -99,6 +104,23 @@ definitions:
       invite_code:
         type: string
       password:
+        type: string
+      username:
+        type: string
+    type: object
+  internal_transport_http.studentProgressResponse:
+    properties:
+      coins:
+        type: integer
+      completedSteps:
+        type: integer
+      id:
+        type: integer
+      lastLevelTitle:
+        type: string
+      totalSteps:
+        type: integer
+      updatedAt:
         type: string
       username:
         type: string
@@ -326,6 +348,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/internal_transport_http.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Update user progress for a specific step
       tags:
       - Progress
@@ -343,6 +367,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/internal_transport_http.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get completed levels for the authenticated user
       tags:
       - Progress
@@ -370,6 +396,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/internal_transport_http.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Check if a level is completed for the authenticated user
       tags:
       - Progress
@@ -406,6 +434,72 @@ paths:
       summary: Upsert dialog for a step
       tags:
       - levels
+  /teacher/invite-code:
+    get:
+      description: Retrieve the invite code for the authenticated teacher
+      responses:
+        "200":
+          description: Invite code
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_transport_http.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get the invite code for the authenticated teacher
+      tags:
+      - User
+  /teacher/students:
+    get:
+      description: Retrieve a list of students associated with the authenticated teacher
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/internal_transport_http.studentProgressResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_transport_http.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get students associated with the authenticated teacher
+      tags:
+      - User
+  /user/join:
+    post:
+      description: Join a student to a teacher using an invite code
+      parameters:
+      - description: Invite Code
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/internal_transport_http.joinStudentInput'
+      responses:
+        "204":
+          description: Student successfully joined the teacher
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_transport_http.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/internal_transport_http.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_transport_http.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Join a student to a teacher using an invite code
+      tags:
+      - User
 securityDefinitions:
   ApiKeyAuth:
     in: header
